# bluestone

./: .clang-format  .clang-tidy  .clangd  CMakeLists.txt  README.md  TODO.md  _build.sh  conanfile.py  docker-compose.yml  note.md
cmake/: CPM.cmake  dependencies.cmake  get_cpm.cmake  libraries.cmake  linux.cmake  lld.cmake  pch.cmake  performance.cmake  quickfix.cmake  unix.cmake
courses/: README.md  example.md
courses/dsa/1_Algorithmic_Toolbox/week1_programming_challenges/1_sum_of_two_digits/: aplusb.cpp
courses/dsa/1_Algorithmic_Toolbox/week2_algorithmic_warmup/2_last_digit_of_fibonacci_number/: fibonacci_last_digit.cpp
courses/dsa/1_Algorithmic_Toolbox/week2_algorithmic_warmup/3_greatest_common_divisor/: gcd.cpp
courses/dsa/1_Algorithmic_Toolbox/week4_divide_and_conquer/3_majority_element/: majority_element.cpp
courses/dsa/1_Algorithmic_Toolbox/week4_divide_and_conquer/5_number_of_inversions/: inversions.cpp
courses/dsa/2_Data_Structures/week1_basic_data_structures/2_tree_height/: tree-height.cpp
courses/dsa/2_Data_Structures/week1_basic_data_structures/3_network_simulation/: process_packages.cpp
courses/dsa/2_Data_Structures/week1_basic_data_structures/5_max_sliding_window/: max_sliding_window.cpp
courses/dsa/2_Data_Structures/week2_priority_queues_and_disjoint_sets/1_make_heap/: build_heap.cpp
courses/dsa/2_Data_Structures/week3_hash_tables/1_phone_book/: phone_book.cpp
courses/dsa/2_Data_Structures/week3_hash_tables/3_hash_substring/: hash_substring.cpp
courses/dsa/2_Data_Structures/week3_hash_tables/4_substring_equality/: substring_equality.cpp
courses/dsa/2_Data_Structures/week4_binary_search_trees/1_tree_traversals/: tree-orders.cpp
courses/dsa/2_Data_Structures/week4_binary_search_trees/4_set_range_sum/: set_range_sum.cpp
courses/dsa/2_Data_Structures/week4_binary_search_trees/5_rope/: rope.cpp
courses/dsa/problemset/: aplusb.cpp  doubly_linked_list.cpp  stress_test.hpp  two_sum.cpp
courses/dsa/problemset/codeforces/: a_way_too_long_words.cpp  watermelon.cpp
courses/dsa/problemset/cses/: permutations.cpp  repetitions.cpp
courses/dsa/problemset/leetcode/: concatenation_of_array.cpp  convert_doubly_linked_list_to_array_i.cpp  count_primes.cpp  fibonacci_number.cpp  find_the_index_of_the_first_occurrence_in_a_string.cpp  intersection_of_two_linked_lists.cpp  merge_two_sorted_lists.cpp  palindrome_number.cpp  remove_duplicates_from_sorted_array.cpp  remove_linked_list_elements.cpp  validparentheses.cpp
courses/dsa/problemset/quiz/: 1.cpp  115.cpp  26.cpp  35.cpp
courses/dsa/problemset/vnoi/liq/: LIQ.I00  LIQ.I05  LIQ.I07  LIQ.I08  LIQ.I12  LIQ.I13  LIQ.I16  LIQ.I17  LIQ.I19  LIQ.IN3  LIQ.IN8  Longest_Increasing_Subsequence_easy.cpp
docs/: README.md
docs/learning/dsa/1_Algorithmic_Toolbox/week1_programming_challenges/2_maximum_pairwise_product/: main.cpp  max_pairwise_product.cpp
docs/learning/dsa/1_Algorithmic_Toolbox/week2_algorithmic_warmup/1_fibonacci_number/: fibonacci.cpp
docs/learning/dsa/1_Algorithmic_Toolbox/week2_algorithmic_warmup/2_last_digit_of_fibonacci_number/: fibonacci_last_digit.cpp
docs/learning/dsa/1_Algorithmic_Toolbox/week2_algorithmic_warmup/3_greatest_common_divisor/: gcd.cpp
docs/learning/dsa/1_Algorithmic_Toolbox/week3_greedy_algorithms/3_car_fueling/: car_fueling.cpp
docs/learning/dsa/1_Algorithmic_Toolbox/week4_divide_and_conquer/1_binary_search/: binary_search.cpp
docs/learning/dsa/2_Data_Structures/week1_basic_data_structures/1_brackets_in_code/: check_brackets.cpp
docs/learning/dsa/2_Data_Structures/week1_basic_data_structures/4_stack_with_max/: stack_with_max_naive.cpp
docs/learning/dsa/problemset/: generic_linked_list.cpp  queue.cpp  singly_linked_list.cpp  stack.cpp  stress_test.cpp
docs/learning/dsa/problemset/cses/: increasing_array.cpp  missing_number.cpp  weird_algorithm.cpp
docs/learning/dsa/problemset/leetcode/: find_the_difference.cpp  linked_list_cycle.cpp  merge_strings_alternately.cpp  middle_of_the_linked_list.cpp  remove_duplicates_from_sorted_array.cpp  roman_to_int.cpp  validparentheses.cpp
docs/learning/dsa/problemset/quiz/: 114.cpp  13.cpp  18.cpp  6.cpp
docs/learning/dsa/problemset/vnoi/liq/: LIQ.I01  LIQ.I02  LIQ.I03  LIQ.I04  (+15 more)
scripts/: _build.sh  _intel_dfp.sh  _quantlib.sh  _quickfix.sh  genkey.sh  quantlib.sh  quickfix.sh  test_net.sh
src/: CMakeLists.txt  main.cpp
src/bots/: bots.cpp
src/common/: CMakeLists.txt  types.hpp
src/core/: CMakeLists.txt  trade_engine.cpp  trade_engine.hpp  trade_queue.hpp
src/core/exchange/: CMakeLists.txt  i_exchange_connector.hpp
src/core/fix/: CMakeLists.txt  README.md  contants.hpp  fast_encoder.hpp
src/core/ipc/: CMakeLists.txt  trade_queue.hpp
src/core/marketdata/: CMakeLists.txt  README.md  order_book.cpp  order_book.hpp
src/core/risk/: risk_engine.hpp
src/core/utils/: CMakeLists.txt  tsc_clock.hpp
src/gateway/: CMakeLists.txt
src/gateway/binance/: CMakeLists.txt  binance_connector.cpp  binance_connector.hpp
src/gateway/interface/: CMakeLists.txt  i_exchange_connector.hpp
src/gateway/lmax/: CMakeLists.txt  lmax_connector.cpp  lmax_connector.hpp
src/gateways/: CMakeLists.txt
src/gateways/binance/: CMakeLists.txt  auth.hpp  binance_connector.cpp  binance_connector.hpp  binance_fix_application.hpp  fix_binance_connector.cpp  fix_binance_connector.hpp
src/gateways/ibkr/: tws_connector.hpp
src/gateways/interface/: CMakeLists.txt
src/gateways/lmax/: CMakeLists.txt  lmax_connector.cpp  lmax_connector.hpp
src/utils/: CMakeLists.txt  boot_manager.cpp  boot_manager.hpp  cfg_util.cpp  cfg_util.hpp  cli.cpp  cli.hpp  cli_util.cpp  cli_util.hpp  config.cpp  config.hpp  config_loader.cpp  config_loader.hpp  event_loop_worker.cpp  event_loop_worker.hpp  file_util.cpp  file_util.hpp
store/: FIX.4.4-bluestone-test-1-SPOT.session  FIX.4.4-bluestone-test-2-SPOT.body  FIX.4.4-bluestone-test-2-SPOT.session
test/: CMakeLists.txt  http_client_sync.cpp  websocket.cpp
test/beast/doc/: http_examples.hpp
test/beast/doc/ssl/: client.cpp  server.cpp
tests/: CMakeLists.txt  http_sync_client.cpp
(+4 files in other folders)
